--- a/src/Elmahdi.ImageSharp.Web.Providers.S3.csproj
+++ b/src/Elmahdi.ImageSharp.Web.Providers.S3.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <PackageId>Elmahdi.ImageSharp.Web.Providers.S3</PackageId>
-    <Version>1.0.0</Version>
-    <PackageVersion>1.0.0</PackageVersion>
+    <Version>1.0.1</Version>
+    <PackageVersion>1.0.1</PackageVersion>
     <Authors>Khaled Elmahdi</Authors>
     <Company>Elmahdi</Company>
     <Title>Elmahdi.ImageSharp.Web.Providers.S3</Title>
@@ -14,6 +14,7 @@
     <PackageIcon>icon.png</PackageIcon>
     <RepositoryUrl>https://github.com/khaledelmahdi/image-sharp-web-providers-s3</RepositoryUrl>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageOutputPath>../Publish</PackageOutputPath>
   </PropertyGroup>
